--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-<!DOCTYPE html><htmllang="ja"><head><meta charset="UTF-8"><title>タイトル</title><link rel="stylesheet" href="mystyle.css"> <script src="ex06-5.js"></script></head><body>・・・・・・・・・・・</body></html>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>サンプル</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+    <h1>サンプルページ</h1>
+    <p>他のページに移動するリンク：</p>
+    <ul>
+        <li><a href="page1.html">ページ1</a></li>
+        <li><a href="page2.html">ページ2</a></li>
+    </ul>
+    <img src="image.jpg" alt="画像の説明">
+</body>
+</html>
