--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1>サンプルページ</h1>
     <p>他のページに移動するリンク：</p>
     <ul>
-        <li><a href="page1.html">ページ1</a></li>
+        <li><a href="https://www.starbucks.co.jp/">ページ1</a></li>
         <li><a href="page2.html">ページ2</a></li>
     </ul>
     <img src="image.jpg" alt="画像の説明">
