--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <p>他のページに移動するリンク：</p>
     <ul>
         <li><a href="https://www.starbucks.co.jp/">ページ1</a></li>
-        <li><a href="page2.html">ページ2</a></li>
+        <li><a href="https://product.starbucks.co.jp/">ページ2</a></li>
     </ul>
     <img src="image.jpg" alt="画像の説明">
 </body>
