--- a/page1.html
+++ b/page1.html
@@ -8,8 +8,8 @@
     <h1>ページ1</h1>
     <p>他のページに移動するリンク：</p>
     <ul>
-        <li><a href="index.html">トップページ</a></li>
-        <li><a href="page2.html">ページ2</a></li>
+        <li><a href="https://www.starbucks.co.jp/">トップページ</a></li>
+        <li><a href="https://product.starbucks.co.jp/">ページ2</a></li>
     </ul>
     <img src="image.jpg" alt="画像の説明">
 </body>
