--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
         <li><a href="https://www.starbucks.co.jp/">ページ1</a></li>
         <li><a href="https://product.starbucks.co.jp/">ページ2</a></li>
     </ul>
-    <img src="image.jpg" alt="画像の説明">
+    <img src="image.jpg" alt="画像の説明">  <!--次ここに画像をいれるところから --!>
 </body>
 </html>
