--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <h1>サンプルページ</h1>
     <p>他のページに移動するリンク：</p>
     <ul>
-        <li><a href="https://www.starbucks.co.jp/">ページ1</a></li>
+        <li><a href="https://www.starbucks.co.jp/">ストロベリーフラペチーノ</a></li>
+        <a href="page1.html"><img src="./image/y_6458b5315162a.jpeg" alt="ストロベリーフラペチーノ"></a>
         <li><a href="https://product.starbucks.co.jp/">ページ2</a></li>
     </ul>
     <img src="image.jpg" alt="画像の説明">  <!--次ここに画像をいれるところから -->
