--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <h1>サンプルページ</h1>
+    <h1>スターバックス</h1>
     <p>他のページに移動するリンク：</p>
     <ul>
         <li><a href="https://www.starbucks.co.jp/">ストロベリーフラペチーノ</a></li>
