--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>スターバックス</h1>
-    <p>他のページに移動するリンク：</p>
+    <p>商品ページに移動するリンク：</p>
     <ul>
         <li><a href="https://www.starbucks.co.jp/">ストロベリーフラペチーノ</a></li>
         <a href="page1.html"><img src="./image/y_6458b5315162a.jpeg" alt="ストロベリーフラペチーノ"></a>
