--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <p>商品ページに移動するリンク：</p>
     <ul>
         <li><a href="https://menu.starbucks.co.jp/4524785461062">ストロベリーフラペチーノ</a></li>
+        <a href="page1.html">ストロベリーフラペチーノ</a><br>
         <a href="page1.html"><img src="./image/y_6458b5315162a.jpeg" alt="ストロベリーフラペチーノ"></a>
         <li><a href="https://product.starbucks.co.jp/">ページ2</a></li>
     </ul>
