--- a/page1.html
+++ b/page1.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>ページ1</h1>
-    <p>他のページに移動するリンク：</p>
+    <p>スターバックス：</p>
     <ul>
         <li><a href="https://www.starbucks.co.jp/">トップページ</a></li>
         <li><a href="https://product.starbucks.co.jp/">ページ2</a></li>
