--- a/page1.html
+++ b/page1.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
     <title>ページ1</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <h1>ページ1</h1>
     <p>スターバックス：</p>
     <ul>
-        <li><a href="https://www.starbucks.co.jp/">トップページ</a></li>
+        <li><a href="https://menu.starbucks.co.jp/4524785461062">トップページ</a></li>
         <li><a href="https://product.starbucks.co.jp/">ページ2</a></li>
     </ul>
     <img src="image.jpg" alt="画像の説明">
