--- a/page1.html
+++ b/page1.html
@@ -8,9 +8,7 @@
     <h1>ページ1</h1>
     <p>スターバックス：</p>
     <ul>
-        <li><a href="https://menu.starbucks.co.jp/4524785461062">トップページ</a></li>
-        <li><a href="https://product.starbucks.co.jp/">ページ2</a></li>
+        <li><a href="https://menu.starbucks.co.jp/4524785461062">ストロベリーフラペチーノ</a></li>
     </ul>
-    <img src="image.jpg" alt="画像の説明">
 </body>
 </html>
