--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <ul>
         <li>
         <a href="page1.html"><img src="./image/y_6458b5315162a.jpeg" alt="ストロベリーフラペチーノ"></a>
-        <li><a href="https://product.starbucks.co.jp/">ページ2</a></li>
+        <li><a href="https://www.starbucks.co.jp/cafe/lemon-cake/">レモンフラペチーノ</a></li>
     </ul>
     <img src="image.jpg" alt="画像の説明">  <!--次ここに画像をいれるところから -->
 </body>
