--- a/page2.html
+++ b/page2.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
     <title>ページ2</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <h1>ページ2</h1>
-    <p>他のページに移動するリンク：</p>
+    <p>スターバックス：</p>
     <ul>
         <li><a href="index.html">トップページ</a></li>
         <li><a href="page1.html">ページ1</a></li>
