--- a/page2.html
+++ b/page2.html
@@ -8,7 +8,7 @@
     <h1>ページ2</h1>
     <p>スターバックス：</p>
     <ul>
-        <li><a href="index.html">トップページ</a></li>
+        <li><a href="https://www.starbucks.co.jp/cafe/lemon-cake/">レモンフラペチーノ</a></li>
         <li><a href="page1.html">ページ1</a></li>
     </ul>
     <img src="image.jpg" alt="画像の説明">
