--- a/page1.html
+++ b/page1.html
@@ -5,8 +5,7 @@
     <title>ページ1</title>
 </head>
 <body>
-    <h1>ページ1</h1>
-    <p>スターバックス：</p>
+    <h1>スターバックス</h1>
     <ul>
         <li><a href="https://menu.starbucks.co.jp/4524785461062">ストロベリーフラペチーノ</a></li>
     </ul>
