--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <h1>スターバックス</h1>
     <p>下記の写真をクリック：</p>
     <ul>
-        <li>
-        <a href="page1.html"><img src="./image/y_6458b5315162a.jpeg" alt="ストロベリーフラペチーノ"></a>
-        <li><a href=　"page2.html><img src=".レモンフラペチーノ</a></li>
+        <li><a href="page1.html"><img src="./image/y_6458b5315162a.jpeg" alt="ストロベリーフラペチーノ"></a></li>li>
+        <li><a href=　"page2.html><img src="./image/レモンフラ.jpeg" alt="レモンフラペチーノ"</a></li>
     </ul>
     <img src="image.jpg" alt="画像の説明">  <!--次ここに画像をいれるところから -->
 </body>
