--- a/page2.html
+++ b/page2.html
@@ -5,8 +5,7 @@
     <title>ページ2</title>
 </head>
 <body>
-    <h1>ページ2</h1>
-    <p>スターバックス：</p>
+    <h1>スターバックス</h1>
     <ul>
         <li><a href="https://www.starbucks.co.jp/cafe/lemon-cake/">レモンフラペチーノ</a></li>
     </ul>
