--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <h1>スターバックス</h1>
     <p>下記の写真をクリック：</p>
     <ul>
-        <li><a href="page1.html"><img src="./image/ストロベリー.jpeg" alt="ストロベリーフラペチーノ"></a></li>
+        <a href="page1.html"><img src="./image/ストロベリー.jpeg" alt="ストロベリーフラペチーノ"></a></li>
         
-        <li><a href="page2.html”><img src="./image/レモンフラ.jpeg" alt="レモンフラペチーノ"</a></li>
+        <a href="page2.html”><img src="./image/レモンフラ.jpeg" alt="レモンフラペチーノ"</a></li>
     </ul>
 </body>
 </html>
