--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
 <body>
     <h1>スターバックス</h1>
     <p>下記の写真をクリック：</p>
-    <ul>
+    　　　　　　　　<a href=""
         <a href="page1.html"><img src="./image/ストロベリー.jpeg" alt="ストロベリーフラペチーノ"></a></li>
-        
         <a href="page2.html”><img src="./image/レモンフラ.jpeg" alt="レモンフラペチーノ"</a></li>
-    </ul>
+    
 </body>
 </html>
