--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <h1>スターバックス</h1>
     <p>下記の写真をクリック：</p>
-    　　　　　　　　<a href=""
+    　　　　　　　　<a href="https://www.starbucks.co.jp/"><img src="xxx.jpeg" alt="スターバックス"></a>
         <a href="page1.html"><img src="./image/ストロベリー.jpeg" alt="ストロベリーフラペチーノ"></a></li>
         <a href="page2.html”><img src="./image/レモンフラ.jpeg" alt="レモンフラペチーノ"</a></li>
     
