--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <h1>スターバックス</h1>
     <p>下記の写真をクリック：</p>
     　　　　　　　　<a href="https://www.starbucks.co.jp/"><img src="xxx.jpeg" alt="スターバックス"></a>
-        <a href="page1.html"><img src="./image/ストロベリー.jpeg" alt="ストロベリーフラペチーノ"></a></li>
-        <a href="page2.html”><img src="./image/レモンフラ.jpeg" alt="レモンフラペチーノ"</a></li>
+        <a href="page1.html"><img src="./image/ストロベリー.jpeg" alt="ストロベリーフラペチーノ"></a>
+        <a href="page2.html”><img src="./image/レモンフラ.jpeg" alt="レモンフラペチーノ"</a>
     
 </body>
 </html>
