--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p>下記の写真をクリック：</p>
     　　　　　　　　<a href="https://www.starbucks.co.jp/"><img src="xxx.jpeg" alt="スターバックス"></a>
         <a href="page1.html"><img src="./image/ストロベリー.jpeg" alt="ストロベリーフラペチーノ"></a><br>
-        <a href="page2.html”><img src="./image/レモンフラ.jpeg" alt="レモンフラペチーノ"</a><br>
+        <a href="page2.html"><img src="./image/レモンフラ.jpeg" alt="レモンフラペチーノ"</a><br>
     
 </body>
 </html>
