--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
     <h1>スターバックス</h1>
     <p>下記の写真をクリック：</p>
-    　　　　　　　　<a href="https://www.starbucks.co.jp/"><img src=".image/スタバ.jpeg" alt="スターバックス"></a>
-        <a href="page1.html"><img src="./image/ストロベリ.jpeg" alt="ストロベリーフラペチーノ"></a><br>
-        <a href="page2.html"><img src="./image/レモンフラ.jpeg" alt="レモンフラペチーノ"</a><br>
+    　　　　　　　　<a href="https://www.starbucks.co.jp/"><img src=".image/sutaba.jpeg" alt="スターバックス"></a>
+        <a href="page1.html"><img src="./image/sutoroberi.jpeg" alt="ストロベリーフラペチーノ"></a><br>
+        <a href="page2.html"><img src="./image/remonnhura.jpeg" alt="レモンフラペチーノ"</a><br>
 </body>
 </html>
