--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body>
     <p class="sample3">スターバックス</p>
     <p>下記の写真をクリック：</p>
-        <a href="page1.html"><img src="./image/sutoroberi.jpeg" alt="ストロベリーフラペチーノ"></a><br>
-        <a href="page2.html"><img src="./image/remonnhura.jpeg" alt="レモンフラペチーノ"></a><br>
+    <a href="https://www.starbucks.co.jp/"><img src="./image/sutaba.jpeg" alt="スターバックスHPページ"></a><br>
+    <a href="page1.html"><img src="./image/sutoroberi.jpeg" alt="ストロベリーフラペチーノ"></a><br>
+    <a href="page2.html"><img src="./image/remonnhura.jpeg" alt="レモンフラペチーノ"></a><br>
 </body>
 </html>
