--- a/page2.html
+++ b/page2.html
@@ -7,7 +7,7 @@
 <body>
     <h1>スターバックス</h1>
     <ul>
-        <li><a href="https://www.starbucks.co.jp/cafe/lemon-cake/">レモンフラペチーノ</a></li>
+        <li><a href="https://www.fashion-press.net/news/103999">レモンフラペチーノ</a></li>
     </ul>
 </body>
 </html>
